--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   color: #fff;
 } */
 
+body::before {
+  display: block;
+  content: "";
+  height: 60px;
+}
+
 .navbar-collapse {
   background: transparent;
   border: none;
